tests/ui/option_safe_usize.stderr
error[E0080]: evaluation of `cxx::private::assert_option_safe::__SizeCheck::<usize>::_IS_OPTION_SIZE` failed
 --> src/rust_option.rs
  |
  |             assert!(mem::size_of::<Option<U>>() == mem::size_of::<Repr>());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: mem::size_of::<Option<U>>() == mem::size_of::<Repr>()', $DIR/src/rust_option.rs:50:13
  |
  = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> src/rust_option.rs
   |
   |     let _: () = __SizeCheck::<T>::_IS_OPTION_SIZE;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
